- Remove buildSrc and fold logic directly into image-service build as other modules aren't Grails apps - Update image-service gradle build to include previous settings.gradle and buildSrc components - Update github workflow to fix incorrect docker compose tear down - Remove FFM libs from CI build as the Grails app doesn't work in Java 25 anyway - Remove FFM libs from gradle build as the Grails app doesn't work in Java 25 anyway - Add IIIF processor interface so it can be implemented using libvips as well - Add tests for JNA libvips - JNA libvips updates